--- a/BHD part 2/index.html
+++ b/BHD part 2/index.html
@@ -27,7 +27,7 @@
             <h1>Happy Birthday, My Love!</h1>
             <p>I've created something magical just for you.</p>
             <p>Are you ready to begin this special journey?</p>
-            <img src="https://png.pngtree.com/png-vector/20250422/ourmid/pngtree-cute-girl-holding-birthday-cake-smiling-cheerfully-png-image_16067658.png" style="height: 200px;width: 200px;" alt="">
+            <img src="WhatsApp Image.1.jpeg" style="height: 200px;width: 200px;" alt="">
             <button class="btn" onclick="nextStep()">Open Your Gift</button>
         </div>
 
@@ -55,7 +55,7 @@
             <h2>My Special Message For You</h2>
             <div class="photo-frame">
                 <!-- Replace with your image path -->
-                <img src="https://medias.artmajeur.com/standard/17262319_a-cutel-european-girl-full-bodycartoon-style-illustration-drawn-with-posca-markers-pretty-face-586679414-1.jpg?v=1738402496" alt="Beautiful You">
+                <img src="WhatsApp Image.1.jpeg" alt="Beautiful You">
             </div>
             <div id="typedMessage" class="message-box">
                 <p class="typing-effect" id="typingText"></p>
@@ -69,13 +69,13 @@
             <p>Some memories I'll cherish forever...</p>
             <div class="memory-container">
                 <div class="polaroid">
-                    <img src="https://images.unsplash.com/photo-1518621736915-f3b1c41bfd00?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80" alt="Memory 1">
+                    <img src="WhatsApp Image 2.jpeg" alt="Memory 1">
                     <div class="polaroid-caption">Our First Date</div>
                 </div>
-                <div class="polaroid">
-                    <img src="https://images.unsplash.com/photo-1529333166437-7750a6dd5a70?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80" alt="Memory 2">
+                <!-- <div class="polaroid">
+                    <img src="WhatsApp Image.1.jpeg" alt="Memory 2">
                     <div class="polaroid-caption">Summer Days</div>
-                </div>
+                </div> -->
                
             </div>
             <button class="btn" onclick="nextStep()">Your Final Surprise</button>
