--- a/BHD part 2/2/index.html
+++ b/BHD part 2/2/index.html
@@ -405,7 +405,7 @@
                 <h2 class="text-4xl md:text-5xl font-bold mb-8 text-gradient title-text">Cherished Memories</h2>
                 <div class="memory-container">
                     <div class="flex flex-col items-center">
-                        <img src="WhatsApp Image.jpeg" 
+                        <img src="WhatsApp Image 2.jpeg" 
                              alt="Beautiful moment" class="memory-image">
                         <p class="text-content italic mt-4 text-center">"Every moment with you becomes a treasured memory"</p>
                     </div>
